src/index.css
@import url("https://fonts.googleapis.com/css2?family=Archivo:wdth,wght@62.5..125,100..900&family=Lora:ital,wght@0,400..700;1,400..700&display=swap");

:root {
  --bg-color: #fafafa;
  --bg-color-2: #ffffff;
  --text-color: #1a1a1a;

  --primary-color: #0033cc; /* E089CC eller E342BE eller 89a7e0 */
  --primary-hover: #002bb3; /* 6b8fcf */
  --primary-text-on-button: #ffffff;

  --code-bg: #f4f4f4;
  --max-width: 1100px;
  --transition-speed: 0.3s ease;
}

.dark-mode {
  --bg-color: #222222;
  --bg-color-2: #111111;
  --text-color: #fafafa;

  --primary-color: #ff7edb; /* 89a7e0 */
  --primary-hover: #ff9ae6; /* a5bdec */
  --primary-text-on-button: #000000;

  --code-bg: #2e2e2e;
}

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  background-color: var(--bg-color);
  color: var(--text-color);
  font-family: "Lora", serif;
  transition: background-color var(--transition-speed), color var(--transition-speed);
}

h1, h2, h3, h4, header, footer {
  font-family: "Archivo", sans-serif;
}

